--- a/automations/battery_luna_2000_S1_solar_export.yaml
+++ b/automations/battery_luna_2000_S1_solar_export.yaml
@@ -23,3 +23,7 @@ action:
         data:
           device_id: YOUR_ID
 mode: single
+
+
+# SKAPA EN INPUT_BOOLEAN SOM HETER export_limit_active för att aktiverar/avaktivera funktionen. 
+# ARBETA IN EN KONTROLL FÖR ONÖDIGA ÄNDRINGAR
