--- a/template.yaml
+++ b/template.yaml
@@ -743,136 +743,139 @@
 ---------------------------------------------------------------------------------------------------------
 
 
-- trigger:
-  - trigger: state
-    entity_id: input_button.update_battery_cheapest_charge
-  sensor:
-      - name: "battery_charge_window_cheapest_1a"
-        state: >
-          {%- set duration = states('input_number.battery_charge_duration_hours') | int %}
-          {%- set duration_quarters = duration * 4 %}
-          {%- set prices_today = state_attr('sensor.nordpool_kwh_se4_sek_1_10_0', 'raw_today') %}
-          {%- if duration >= 1 and prices_today is not none and prices_today | length >= (16*4) %}
-            {%- set ns = namespace(min_avg=None, start_index=none) %}
-            {%- set start_index = 14*4 %}
-            {%- set end_index = (16*4) - duration_quarters %}
-            {%- for i in range(start_index, end_index + 1) %}
-              {%- set slice = prices_today[i:i + duration_quarters] %}
-              {%- if slice | length == duration_quarters %}
-                {%- set values = slice | map(attribute='value') | list %}
-                {%- set avg = (values | sum) / duration_quarters %}
-                {%- if ns.min_avg is none or avg < ns.min_avg %}
-                  {%- set ns.min_avg = avg %}
-                  {%- set ns.start_index = i %}
+  - trigger:
+    - trigger: state
+      entity_id: input_button.update_battery_cheapest_charge
+    sensor:
+        - name: "battery_charge_window_cheapest_1a"
+          state: >
+            {%- set duration = states('input_number.battery_charge_duration_hours') | int %}
+            {%- set duration_quarters = duration * 4 %}
+            {%- set prices_today = state_attr('sensor.YOUR_NORDPOOL_SENSOR', 'raw_today') %}
+            {%- if duration >= 1 and prices_today is not none and prices_today | length >= (16*4) %}
+              {%- set ns = namespace(min_avg=None, start_index=none) %}
+              {%- set start_index = 14*4 %}
+              {%- set end_index = (16*4) - duration_quarters %}
+              {%- for i in range(start_index, end_index + 1) %}
+                {%- set slice = prices_today[i:i + duration_quarters] %}
+                {%- if slice | length == duration_quarters %}
+                  {%- set values = slice | map(attribute='value') | list %}
+                  {%- set avg = (values | sum) / duration_quarters %}
+                  {%- if ns.min_avg is none or avg < ns.min_avg %}
+                    {%- set ns.min_avg = avg %}
+                    {%- set ns.start_index = i %}
+                  {%- endif %}
                 {%- endif %}
+              {%- endfor %}
+              {%- if ns.start_index is not none %}
+                {%- set start_time = (now().replace(hour=0, minute=0, second=0, microsecond=0) + timedelta(minutes=ns.start_index*15)).astimezone() %}
+                {%- set end_time = start_time + timedelta(minutes=duration_quarters*15) %}
+                {{ start_time.isoformat() ~ ' - ' ~ end_time.isoformat() }}
+              {%- else %}
+                unavailable
               {%- endif %}
-            {%- endfor %}
-            {%- if ns.start_index is not none %}
-              {%- set start_time = (now().replace(hour=0, minute=0, second=0, microsecond=0) + timedelta(minutes=ns.start_index*15)).astimezone() %}
-              {%- set end_time = start_time + timedelta(minutes=duration_quarters*15) %}
-              {{ start_time.isoformat() ~ ' - ' ~ end_time.isoformat() }}
             {%- else %}
               unavailable
             {%- endif %}
-          {%- else %}
-            unavailable
-          {%- endif %}
+
 
 --------------------------------------------------------------------------------------------------------
 
-- trigger:
-  - trigger: state
-    entity_id: input_button.update_battery_cheapest_charge
-  sensor:
-      - name: "battery_charge_window_cheapest_1b"
-        state: >
-          {%- set numberOfSequentialHours = states('input_number.battery_charge_duration_hours') | int %}
-          {%- set numberOfSequentialQuarters = numberOfSequentialHours * 4 %}
-          {%- set prices_tomorrow = state_attr('sensor.nordpool_kwh_se4_sek_1_10_0', 'raw_tomorrow') or [] %}
-          {%- set ns = namespace(min_avg=None, start_index=0) %}
+  - trigger:
+    - trigger: state
+      entity_id: input_button.update_battery_cheapest_charge
+    sensor:
+        - name: "battery_charge_window_cheapest_1b"
+          state: >
+            {%- set numberOfSequentialHours = states('input_number.battery_charge_duration_hours') | int %}
+            {%- set numberOfSequentialQuarters = numberOfSequentialHours * 4 %}
+            {%- set prices_tomorrow = state_attr('sensor.YOUR_NORDPOOL_SENSOR', 'raw_tomorrow') or [] %}
+            {%- set ns = namespace(min_avg=None, start_index=0) %}
 
-          {#          DEBUG: Laddar priser för 11:00 till 14:00 imorgon          #}
-          {%- set filtered_prices = prices_tomorrow
-              | selectattr('start','>=', (today_at("11:00") + timedelta(days=1)))
-              | selectattr('end','<=', (today_at("14:00") + timedelta(days=1)))
-              | list %}
+            {#          DEBUG: Laddar priser för 11:00 till 14:00 imorgon          #}
+            {%- set filtered_prices = prices_tomorrow
+                | selectattr('start','>=', (today_at("11:00") + timedelta(days=1)))
+                | selectattr('end','<=', (today_at("14:00") + timedelta(days=1)))
+                | list %}
 
-          {#          DEBUG: Filtered prices count = {{ filtered_prices | length }}          #}
+            {#          DEBUG: Filtered prices count = {{ filtered_prices | length }}          #}
 
-          {%- for i in range(0, filtered_prices | length - numberOfSequentialQuarters + 1) %}
-                    {%- set slice = filtered_prices[i:i + numberOfSequentialQuarters] %}
-                    {%- set avg = (slice | map(attribute='value') | list | sum) / numberOfSequentialQuarters %}
-                    {%- if ns.min_avg is none or avg < ns.min_avg %}
-                              {%- set ns.min_avg = avg %}
-                              {%- set ns.start_index = i %}
-                    {%- endif %}
-          {%- endfor %}
+            {%- for i in range(0, filtered_prices | length - numberOfSequentialQuarters + 1) %}
+                      {%- set slice = filtered_prices[i:i + numberOfSequentialQuarters] %}
+                      {%- set avg = (slice | map(attribute='value') | list | sum) / numberOfSequentialQuarters %}
+                      {%- if ns.min_avg is none or avg < ns.min_avg %}
+                                {%- set ns.min_avg = avg %}
+                                {%- set ns.start_index = i %}
+                      {%- endif %}
+            {%- endfor %}
 
-          {%- if (filtered_prices | count) >= (ns.start_index + numberOfSequentialQuarters) %}
-                    {%- set start_obj = filtered_prices[ns.start_index] %}
-                    {%- set end_obj = filtered_prices[ns.start_index + numberOfSequentialQuarters - 1] %}
-                    {%- if as_datetime(end_obj.end).hour > 14 %}
-                              Inget lämpligt intervall hittades.
-                    {%- else %}
-                              {%- set start_str = (start_obj.start | as_local).strftime('%Y-%m-%dT%H:%M:%S%z') %}
-                              {%- set end_str = (end_obj.end | as_local).strftime('%Y-%m-%dT%H:%M:%S%z') %}
-                              {{ start_str[:-2] ~ ':' ~ start_str[-2:] }} - {{ end_str[:-2] ~ ':' ~ end_str[-2:] }}
-                    {%- endif %}
-          {%- else %}
-                    Inget lämpligt intervall hittades.
-          {%- endif %}
+            {%- if (filtered_prices | count) >= (ns.start_index + numberOfSequentialQuarters) %}
+                      {%- set start_obj = filtered_prices[ns.start_index] %}
+                      {%- set end_obj = filtered_prices[ns.start_index + numberOfSequentialQuarters - 1] %}
+                      {%- if as_datetime(end_obj.end).hour > 14 %}
+                                Inget lämpligt intervall hittades.
+                      {%- else %}
+                                {%- set start_str = (start_obj.start | as_local).strftime('%Y-%m-%dT%H:%M:%S%z') %}
+                                {%- set end_str = (end_obj.end | as_local).strftime('%Y-%m-%dT%H:%M:%S%z') %}
+                                {{ start_str[:-2] ~ ':' ~ start_str[-2:] }} - {{ end_str[:-2] ~ ':' ~ end_str[-2:] }}
+                      {%- endif %}
+            {%- else %}
+                      Inget lämpligt intervall hittades.
+            {%- endif %}
+
 
 --------------------------------------------------------------------------------------------------------
-- trigger:
-  - trigger: state
-    entity_id: input_button.update_battery_cheapest_charge
-  sensor:
-      - name: "battery_charge_window_cheapest_2"
-        state: >
-          {%- set numberOfSequentialHours = states('input_number.battery_charge_duration_hours') | int %}
-          {%- set numberOfSequentialQuarters = numberOfSequentialHours * 4 %}
-          {%- set prices_today = state_attr('sensor.nordpool_kwh_se4_sek_1_10_0', 'raw_today') or [] %}
-          {%- set prices_tomorrow = state_attr('sensor.nordpool_kwh_se4_sek_1_10_0', 'raw_tomorrow') or [] %}
-          {%- set ns = namespace(min_avg=None, start_index=0) %}
+  - trigger:
+    - trigger: state
+      entity_id: input_button.update_battery_cheapest_charge
+    sensor:
+        - name: "battery_charge_window_cheapest_2"
+          state: >
+            {%- set numberOfSequentialHours = states('input_number.battery_charge_duration_hours') | int %}
+            {%- set numberOfSequentialQuarters = numberOfSequentialHours * 4 %}
+            {%- set prices_today = state_attr('sensor.YOUR_NORDPOOL_SENSOR', 'raw_today') or [] %}
+            {%- set prices_tomorrow = state_attr('sensor.YOUR_NORDPOOL_SENSOR', 'raw_tomorrow') or [] %}
+            {%- set ns = namespace(min_avg=None, start_index=0) %}
 
-          {# Ta priser från idag från kl 23:00 (23*4 = 92) #}
-          {%- set prices_today_filtered = prices_today[92:] %}
+            {# Ta priser från idag från kl 23:00 (23*4 = 92) #}
+            {%- set prices_today_filtered = prices_today[92:] %}
 
-          {# Ta morgondagens priser upp till kl 05:00 (6h*4 = 24 kvart) #}
-          {%- set prices_tomorrow_filtered = prices_tomorrow[0:24] %}
+            {# Ta morgondagens priser upp till kl 05:00 (6h*4 = 24 kvart) #}
+            {%- set prices_tomorrow_filtered = prices_tomorrow[0:24] %}
 
-          {# Kombinera listorna #}
-          {%- set combined_prices = prices_today_filtered + prices_tomorrow_filtered %}
+            {# Kombinera listorna #}
+            {%- set combined_prices = prices_today_filtered + prices_tomorrow_filtered %}
 
-          {# Sök billigaste intervall #}
-          {%- for i in range(0, combined_prices | length - numberOfSequentialQuarters + 1) %}
-                    {%- set slice = combined_prices[i:i + numberOfSequentialQuarters] %}
-                    {%- set avg = (slice | map(attribute='value') | list | sum) / numberOfSequentialQuarters %}
-                    {%- if ns.min_avg is none or avg < ns.min_avg %}
-                              {%- set ns.min_avg = avg %}
-                              {%- set ns.start_index = i %}
-                    {%- endif %}
-          {%- endfor %}
+            {# Sök billigaste intervall #}
+            {%- for i in range(0, combined_prices | length - numberOfSequentialQuarters + 1) %}
+                      {%- set slice = combined_prices[i:i + numberOfSequentialQuarters] %}
+                      {%- set avg = (slice | map(attribute='value') | list | sum) / numberOfSequentialQuarters %}
+                      {%- if ns.min_avg is none or avg < ns.min_avg %}
+                                {%- set ns.min_avg = avg %}
+                                {%- set ns.start_index = i %}
+                      {%- endif %}
+            {%- endfor %}
 
-          {%- if combined_prices | length >= numberOfSequentialQuarters and ns.start_index + numberOfSequentialQuarters - 1 < combined_prices | length %}
-                    {%- set start_obj = combined_prices[ns.start_index] %}
-                    {%- set end_obj = combined_prices[ns.start_index + numberOfSequentialQuarters - 1] %}
+            {%- if combined_prices | length >= numberOfSequentialQuarters and ns.start_index + numberOfSequentialQuarters - 1 < combined_prices | length %}
+                      {%- set start_obj = combined_prices[ns.start_index] %}
+                      {%- set end_obj = combined_prices[ns.start_index + numberOfSequentialQuarters - 1] %}
 
-                    {# Konvertera till ISO-format med kolon i tidszonen #}
-                    {%- set start_str = start_obj.start.strftime('%Y-%m-%dT%H:%M:%S%z') %}
-                    {%- set end_str = end_obj.end.strftime('%Y-%m-%dT%H:%M:%S%z') %}
+                      {# Konvertera till ISO-format med kolon i tidszonen #}
+                      {%- set start_str = start_obj.start.strftime('%Y-%m-%dT%H:%M:%S%z') %}
+                      {%- set end_str = end_obj.end.strftime('%Y-%m-%dT%H:%M:%S%z') %}
 
-                    {{ start_str[:-2] ~ ':' ~ start_str[-2:] }} - {{ end_str[:-2] ~ ':' ~ end_str[-2:] }}
-          {%- else %}
-                    Ingen giltigt intervall hittades
-          {%- endif %}
+                      {{ start_str[:-2] ~ ':' ~ start_str[-2:] }} - {{ end_str[:-2] ~ ':' ~ end_str[-2:] }}
+            {%- else %}
+                      Ingen giltigt intervall hittades
+            {%- endif %}
 
 ----------------------------------------------------------------------------------------------
 
 
-# TAR FRAM OM NYA ELPRISER ÄR TILLGÄNGLIGA
-- binary_sensor:
-      - name: "Nordpool Tomorrow Prices Available"
-        unique_id: "nordpool_tomorrow_prices_available"
-        state: >
-          {{ state_attr('sensor.YOUR_NORDPOOL_SENSOR', 'tomorrow_valid') == true }}
+  # TAR FRAM OM NYA ELPRISER ÄR TILLGÄNGLIGA
+  - binary_sensor:
+        - name: "Nordpool Tomorrow Prices Available"
+          unique_id: "nordpool_tomorrow_prices_available"
+          state: >
+            {{ state_attr('sensor.YOUR_NORDPOOL_SENSOR', 'tomorrow_valid') == true }}
+
